# incident-co-pilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Dockerfile  TESTING.md  main.py  pyproject.toml
backend/adapters/persistence/sqlalchemy/: mappers.py  repositories.py  uow.py
backend/api/: dependencies.py  exception_handlers.py
backend/api/middleware/: __init__.py  request_id.py  request_logging.py
backend/api/routes/: auth.py  health.py  incidents.py
backend/core/: config.py  logging.py
backend/db/: health.py  sessions.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 014ffdd815c4_add_description_to_incidents.py  0d6a833b7968_initial_migration.py  250c7e655898_add_length_constraints_to_timeline_.py  941cca91d37c_add_created_at_and_updated_at_.py  a2746ead8fc0_add_length_constraints_to_timeline_.py
backend/db/models/: incident.py  timeline_event.py
backend/domain/incidents/: entities.py  enums.py  ports.py
backend/schemas/: error.py  health.py  incident.py  timeline_event.py
backend/services/: errors.py
backend/services/incidents/: commands.py  report_markdown.py  usecases.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_health_integration.py  test_incidents_api_integration.py
backend/tests/integration/api/: test_api_key_auth_routes.py  test_error_contract.py  test_health.py  test_incidents_api.py  test_request_id_middleware.py  (+1 more)
backend/tests/unit/: test_health_unit.py
(+36 files in other folders)
