[project]
name = "Incident Co-Pilot API"
version = "0.1.0"
description = "Incident Co-Pilot is a lightweight incident timeline capture and summarisation tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.128.0",
    "langchain>=1.2.3",
    "langchain-openai>=1.1.7",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
